chore: improve a11y, fixing contrast on colors

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -15,14 +15,14 @@
 
 .copyright {
   text-align: center;
-  color: #787878;
+  color: #595959;
 
   span {
     padding: 0 0.5rem;
   }
 
   a {
-    color: #787878;
+    color: #595959;
     text-decoration: none;
   }
 }
@@ -31,8 +31,7 @@ mat-card.wiki {
   border-color: #efe897;
   background-color: #fffcd6;
   font-family: 'Lucida Console', Monaco, monospace;
-  text-shadow: 1px 1px 2px #e5e5d0;
-  color: #8e8755;
+  color: #5b5634;
 
   mat-card-content {
     font-size: 85%;
