--- a/src/app/components/main/main.component.scss
+++ b/src/app/components/main/main.component.scss
@@ -9,7 +9,7 @@
   a {
     flex: 0 0 auto;
     text-transform: uppercase;
-    background-color: #15863c;
+    background-color: #0c652b;
     margin: 0 0.5em;
     height: 80px;
     line-height: 80px;
