--- a/src/app/core/components/navigation/navigation.component.scss
+++ b/src/app/core/components/navigation/navigation.component.scss
@@ -1,5 +1,5 @@
 mat-toolbar {
-  background-color: #18b351;
+  background-color: #0c652b;
 }
 
 h1 {
@@ -24,7 +24,7 @@ nav {
     }
 
     &:hover:not(.mat-mdc-raised-button):not(.active) {
-      background-color: #15863c;
+      background-color: #033313;
     }
 
     &.mat-mdc-raised-button {
